--- a/Project.toml
+++ b/Project.toml
@@ -4,7 +4,7 @@ authors = ["sof202 <s.o.fletcher@exeter.ac.uk>"]
 version = "0.1.0"
 
 [deps]
-Plots = "91a5bcdd-55d7-5caf-9e0b-520d859cae80"
+UnicodePlots = "b8865327-cd53-5732-bb35-84acbb429228"
 
 [compat]
-Plots = "1.40.14"
+UnicodePlots = "3.8.0"
