--- a/Project.toml
+++ b/Project.toml
@@ -4,6 +4,7 @@ authors = ["sof202 <s.o.fletcher@exeter.ac.uk>"]
 version = "0.1.0"
 
 [deps]
+BenchmarkTools = "6e4b80f9-dd63-53aa-95a3-0cdb28fa8baf"
 UnicodePlots = "b8865327-cd53-5732-bb35-84acbb429228"
 
 [compat]
